C++ driver now supports 1.8 M/R options SERVER-2893